--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="stylesCV.css">
     <meta charset="utf-8">
+    <title>David Rangel CV</title>
 </head>
 
 <body>
